= ActiveMerchant CHANGELOG

* Fat Zebra: More consistent handling of tokens [adrianmacneil]

== Version 1.35.1 (July 22, 2013)

* Stripe: Allow application_fees to be refunded via the refund_application_fee flag [melari]

== Version 1.35.0 (July 17, 2013)

* Add Barclays ePDQ Extra Plus gateway [ntalbott]
* PayPal: Add MassPay payment to recipients by UserID [damonmorgan]
* Authorize.Net: Add authorization_code to response params [noahlh]
* Make Rails 4 a supported version [sanemat]
* CyberSource: Add pinless debit card support [JoshMcKin]
* Verkkomaksut: Add item title field [kaapa]
* Add MerchantWare V4 gateway [hron]
* Eway Rapid: Add #store method [adrianmacneil]
* Barclays ePDQ Extra Plus: Use correct PROD url [ntalbott]
* Hitrust: update test & live urls [melari]
* NAB Transact: Add auth & capture support [nagash]
* Mercury: Support card-less capture and refund [ntalbott]
* Mercury: Support void [ntalbott]

== Version 1.34.1 (June 28, 2013)

* WorldPay: Add dynamic return URL [jordanwheeler]
* Merchant One: New gateway [coteyr, melari]
* Balanced: Fix exception for invalid email [duff]
* Update supported countries for Paymill & PaymentExpress [duff]
* Worldpay: Add support for diners club [duff]
* Stripe: Include address with card data [melari]

== Version 1.34.0 (June 20, 2013)

* PayPal Express gateway: Add unstore support [duff]
* Stripe: Send application_fee with capture requests [melari]
* Make #unstore method signature consistent across gateways [duff]
* Dwolla: Major bug fixes. [capablemonkey, melari]
* Stripe: Add support for including track data [melari]

== Version 1.33.0 (May 30, 2013)

* Netaxept: Completely revamped to use the "M" service type [rbjordan3, ntalbott]
* Litle: Void authorizations via an auth reversal [jrust]
* Add RBK Money integration [england]
* Direcpay: Update test url [ashish-d]
* PayPal Express gateway: Add support for creating billing agreements [fabiokr]
* PayPal Express gateway: Add reference authorizations [fabiokr]