@@ -408,3 +408,7 @@ Barclays ePDQ Extra Plus (June 2013)
 MerchantWare V4 (July 2013)
 
 * Aleksei Gusev (hron)
+
+Platron integration (July 2013)
+
+* Alexey Kiryushin (alexwl)
